--- a/package.json
+++ b/package.json
@@ -1,50 +1,42 @@
 {
-<<<<<<< HEAD
-  "name": "mkc_image_client",
-=======
   "name": "image-conversion-tool",
->>>>>>> 451adf1 (redesign)
-  "version": "0.1.0",
-  "private": true,
+  "version": "1.0.0",
+  "description": "### Step 1 - ![Step 1](./public/example1.png)",
+  "main": "next.config.js",
+  "dependencies": {
+    "@types/node": "^20.2.1",
+    "@types/react": "^18.2.6",
+    "@types/react-dom": "^18.2.4",
+    "autoprefixer": "^10.4.14",
+    "axios": "^1.4.0",
+    "formidable": "^2.1.1",
+    "moment": "^2.29.4",
+    "next": "^13.4.2",
+    "postcss": "^8.4.23",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-icons": "^4.8.0",
+    "react-loader-spinner": "^5.3.4",
+    "tailwindcss": "^3.3.2",
+    "typescript": "^5.0.4"
+  },
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
   },
-  "dependencies": {
-<<<<<<< HEAD
-    "@types/node": "20.1.3",
-=======
-    "@types/node": "20.1.7",
->>>>>>> 451adf1 (redesign)
-    "@types/react": "18.2.6",
-    "@types/react-dom": "18.2.4",
-    "autoprefixer": "10.4.14",
-    "axios": "^1.4.0",
-<<<<<<< HEAD
-    "eslint": "8.40.0",
-    "eslint-config-next": "13.4.2",
-=======
-    "formidable": "^2.1.1",
->>>>>>> 451adf1 (redesign)
-    "moment": "^2.29.4",
-    "next": "13.4.2",
-    "postcss": "8.4.23",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "react-icons": "^4.8.0",
-    "react-loader-spinner": "^5.3.4",
-<<<<<<< HEAD
-    "react-toastify": "^9.1.3",
-    "tailwindcss": "3.3.2",
-    "typescript": "5.0.4"
-=======
-    "tailwindcss": "3.3.2",
-    "typescript": "5.0.4"
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/fk00750/mkc_image_frontend.git"
   },
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/fk00750/mkc_image_frontend/issues"
+  },
+  "homepage": "https://github.com/fk00750/mkc_image_frontend#readme",
   "devDependencies": {
     "@types/formidable": "^2.0.6"
->>>>>>> 451adf1 (redesign)
   }
 }
